Fix word wrap in a string without spaces

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
   font-size: 16px;
   display: flex;
   justify-content: space-between;
+  /* white-space: nowrap; */
   gap: 10px;
 }
 
@@ -144,6 +145,11 @@ body {
  min-width: 107px;
 }
 
+.user-name {
+  max-width: 383px;
+}
+
 .wrap-words {
-  word-break: break-all;
+  overflow-wrap: break-word;
+  /* word-break: break-all; */
 }
